Put min-height on answer and question container to avoid jumping button

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter&family=Karla&display=swap");
 
+@mixin for-mobile {
+  @media (max-width: 480px) {
+    @content;
+  }
+}
+
+@mixin for-tablet {
+  @media (max-width: 780px) {
+    @content;
+  }
+}
+
 * {
   box-sizing: border-box;
 }
@@ -62,17 +74,25 @@ body {
 
 .quiz {
   border: 1px solid #dbdef0;
-  margin-top: 15%;
+  // margin-top: 15%;
   // width: 100%;
   // min-height: 100%;
   padding: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
+  min-height: 495px;
+  // width: 450px;
+  // height: 360px;
+
 
   &__question-number {
     color: #293264;
     font-family: "Inter", sans-serif;
+
+    @include for-mobile {
+      font-size: 14px;
+  }
   }
 
   &__question {
@@ -80,7 +100,20 @@ body {
     font-family: "Karla", sans-serif;
     word-break: break-word;
     text-align: center;
-    min-height: 56px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 120px;
+
+    @include for-tablet {
+      min-height: 110px;
+      font-size: 22px;
+    }
+
+    @include for-mobile {
+      min-height: 90px;
+      font-size: 16px;
+  }
   }
 
   &__answer-container {
@@ -88,6 +121,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    min-height: 230px;
+
+  //   @include for-mobile {
+  //     justify-content: center;
+  //     flex-direction: row;
+  //     flex-wrap: wrap;
+  // }
   }
 
   &__answer {
@@ -96,10 +136,14 @@ body {
     list-style-type: none;
     margin: 3px;
     border: 1px solid #293264;
-    padding: 5px 20px;
+    padding: 5px 0;
     border-radius: 10px;
     text-align: center;
     cursor: pointer;
+
+    @include for-mobile {
+      font-size: 14px;
+  }
   }
 
   &__answer:hover {
@@ -173,6 +217,13 @@ body {
     cursor: pointer;
     margin: 30px 0;
     align-self: flex-end;
+    // position: fixed;
+    // bottom: 7%;
+
+    @include for-mobile {
+      align-self: auto;
+      font-size: 14px;
+  }
   }
 
   &__next-button:hover {
@@ -185,6 +236,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
   }
   &__replay-button {
     background-color: #4d5b9e;
@@ -205,9 +257,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 
   &__wrapper {
-    width: 50%;
+    width: 50vw;
   }
   &__bottom-wrapper {
     display: flex;
